It is now no longer required to input a number in both the hours and minutes boxes for breaks. Either one or the other or both. Corrected a bug with how noon was represented in the end time of a shift. Fixed various issues with the Light theme (BETA). Added an error state if the previously mentioned conditions for the break inputs are not met.

--- a/timekeeper/src/index.css
+++ b/timekeeper/src/index.css
@@ -1,15 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
 
 :root {
-  --main-dark-bg: #242424;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: var(--main-dark-bg);
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
