--- a/timekeeper/src/scenes/Dashboard/AddWages/AddShift.css
+++ b/timekeeper/src/scenes/Dashboard/AddWages/AddShift.css
@@ -1,8 +1,55 @@
-.earned-wages-container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+.congrats-title {
+  transform: translateX(-200%);
+  opacity: 0;
+  animation: slide-in 0.3s linear forwards;
+}
+
+.total-earned {
+  transform: translateY(400%);
+  opacity: 0;
+  animation: slide-up 0.3s linear forwards;
+  animation-delay: 0.3s;
+}
+
+.try-again {
+  opacity: 0;
+  animation: fade-in 0.2s linear forwards;
+  animation-delay: 0.6s;
+}
+
+.save-btn {
+  opacity: 0;
+  animation: fade-in 0.2s linear forwards;
+  animation-delay: 0.8s;
+}
+
+@keyframes slide-up {
+  from {
+    transform: translateY(400%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-in {
+  from {
+    transform: translateX(-200%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
